--- a/RentAMovie/wwwroot/css/site.css
+++ b/RentAMovie/wwwroot/css/site.css
@@ -18,6 +18,22 @@ body {
     background-color: #f2f2f2;
 }
 
+body::-webkit-scrollbar {
+    width: 15px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #f2f2f2;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #212529;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #484848;
+}
+
 img {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -105,6 +121,7 @@ footer a {
 footer a:hover {
     color: #0079FF;
 }
+
 
 @media screen and (max-width: 573px) {
     footer {
